--- a/T.html
+++ b/T.html
@@ -5,7 +5,7 @@
 
 <p id="outp"></p>
 
-<script src="/kaihans/2Base10examp.es">
+<script src="/JavaScript_N_ECMAScript/2Base10examp.es">
 </script>
 
 </body>
