--- a/T.html
+++ b/T.html
@@ -3,9 +3,9 @@
 <body>
 
 
-<p id="outp"></p>
+<p id="bin"></p>
 
-<script src="/JavaScript_N_ECMAScript/2Base10examp.es">
+<script src="/JavaScript_N_ECMAScript/box.js">
 </script>
 
 </body>
