--- a/Tanggal.html
+++ b/Tanggal.html
@@ -1,4 +1,4 @@
 <html>
-<script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript"></script>
+<script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js"></script>
 <div id="fullDate"></div>
 </html>
