--- a/Tanggal.html
+++ b/Tanggal.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html>
+<head>
 <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js"></script>
-<div id="fullDate"></div>
+</head>
+<body>
+<h1 id="fullDate"></h1>
+</body>
 </html>
