--- a/T.html
+++ b/T.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<h3 id="fullDate"></h3>
+        <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript">
+        </script>
 
 <p id="bin"></p>
 <p id="oct"></p>
