--- a/T.html
+++ b/T.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body>
+<body onload="datefunc()">
 <h3 style="text-align:right;" id="fullDate"></h3>
 <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript"></script>
 
