--- a/T.html
+++ b/T.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+<script>
+var binary = 0b00000000;
+var octal = 0o377;
+var hexadecimal = 0xFF;
+document.getElementById("outp").innerHTML=
+binary + ", " + octal + ", " + hexadecimal;
+document.body.style.backgroundColor= "rgb(" + 
+binary + ", " + octal + ", " + hexadecimal + ")";
+</script>
+</head>
 <body onload="datefunc()">
 <h3 style="text-align:right;" id="fullDate"></h3>
 <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript"></script>
