--- a/T.html
+++ b/T.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <script>
-var binary = 0b00000000;
-var octal = 0o377;
-var hexadecimal = 0xFF;
+let binary = 0b00000000;
+let octal = 0o377;
+let hexadecimal = 0xFF;
 document.body.style.backgroundColor= "rgb(" + 
-binary + ", " + octal + ", " + hexadecimal + ")";
+binary + "," + octal + "," + hexadecimal + ")";
 </script>
 </head>
 <body onload="datefunc()">
