--- a/T.html
+++ b/T.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fedrikaristiyanto.github.io/css/bg-lin-gradien-pelangi.css"  rel="stylesheet" type="text/css" />
 </head>
 <body onload="datefunc()">
+<div id="header">
 <h3 style="text-align:right;" id="fullDate"></h3>
+<h2>T</h2>
 <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript"></script>
-
+</div>
 <p id="bin"></p>
 <p id="oct"></p>
 <p id="hex"></p>
