--- a/T.html
+++ b/T.html
@@ -4,7 +4,7 @@
 <link href="https://fedrikaristiyanto.github.io/css/bg-lin-gradien-pelangi.css"  rel="stylesheet" type="text/css" />
 </head>
 <body onload="datefunc()">
-<div id="header">
+<div id="pelangi">
 <h3 style="text-align:right;" id="fullDate"></h3>
 <h2>T</h2>
 <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript"></script>
