--- a/T.html
+++ b/T.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 <link href="https://fedrikaristiyanto.github.io/css/bg-lin-gradien-pelangi.css"  rel="stylesheet" type="text/css" />
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body onload="datefunc()">
 <div id="pelangi">
-<h3 style="text-align:right;" id="fullDate"></h3>
+<h4 style="text-align:right;" id="fullDate"></h4>
 <h2>T</h2>
 <script src="https://fedrikaristiyanto.github.io/scripts/FullDate.js" type="text/javascript"></script>
 </div>
