--- a/odd_even.html
+++ b/odd_even.html
@@ -11,7 +11,7 @@
         <textarea id="outp" readonly></textarea>
         <br>
         <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()">
-        <input type="reset">
+        <input type="reset" value="clear">
         </form>
     </body>
 </html>
