--- a/odd_even.html
+++ b/odd_even.html
@@ -3,6 +3,9 @@
     <head>
         <title>Cek Ganjil Genap</title>
         <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
+
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <body>
         <form>
