--- a/odd_even.html
+++ b/odd_even.html
@@ -5,6 +5,7 @@
         <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="https://fedrikaristiyanto.github.io/css/inputnum.css"  rel="stylesheet" type="text/css" />
 
     </head>
     <body>
