--- a/odd_even.html
+++ b/odd_even.html
@@ -12,7 +12,7 @@
         <form>
         <input type="number" id="inp"><br>
         
-        <textarea id="outp" readonly></textarea>
+        <textarea style="background-color:cyan" id="outp" readonly></textarea>
         <br>
         <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()">
         <input type="reset" value="clear">
