--- a/odd_even.html
+++ b/odd_even.html
@@ -15,7 +15,7 @@
         <textarea style="background-color:cyan" id="outp" readonly></textarea>
         <br>
         <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()">
-        <input type="reset" value="clear">
+        <input type="reset" value="clear" style="background-color:#ff0000;color:white;">
         </form>
     </body>
 </html>
