--- a/odd_even.html
+++ b/odd_even.html
@@ -14,7 +14,7 @@
         
         <textarea style="background-color:cyan" id="outp" readonly></textarea>
         <br>
-        <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()">
+        <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()" style="background-color:lime;color:white;">
         <input type="reset" value="clear" style="background-color:#ff0000;color:white;">
         </form>
     </body>
