--- a/odd_even.html
+++ b/odd_even.html
@@ -3,16 +3,19 @@
     <head>
         <title>Cek Ganjil Genap</title>
         <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
-
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="https://fedrikaristiyanto.github.io/css/inputnum.css"  rel="stylesheet" type="text/css" />
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+       <style>
+        .field {
+         background-color:blue;
+         color:white;
+         }
+       </style>
     </head>
     <body>
         <form>
-        <input type="number" id="inp"><br>
+        <input class="field" type="number" id="inp"><br>
         
-        <textarea style="background-color:cyan" id="outp" readonly></textarea>
+        <textarea class="field" id="outp" readonly></textarea>
         <br>
         <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()" style="background-color:green;color:white;">
         <input type="reset" value="clear" style="background-color:#ff0000;color:white;">
