--- a/odd_even.html
+++ b/odd_even.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Cek Ganjil Genap</title>
+   <head>
+       <title>Cek Ganjil Genap</title>
         <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
        <style>
         .field {
          background-color:blue;
          color:white;
+         padding:5px;
          }
        </style>
-    </head>
+   </head>
     <body>
         <form>
         <input class="field" type="number" id="inp"><br>
