--- a/odd_even.html
+++ b/odd_even.html
@@ -10,6 +10,9 @@
          color:white;
          padding:5px;
          }
+body {
+background-image: url('https://fedrikaristiyanto.github.io/image/png/Star.png');
+}
        </style>
    </head>
     <body>
