--- a/odd_even.html
+++ b/odd_even.html
@@ -12,6 +12,7 @@
          }
 body {
 background-image: url("https://fedrikaristiyanto.github.io/image/png/Star.png");
+background-size:50px;
 }
        </style>
    </head>
