--- a/ScreenResolution.html
+++ b/ScreenResolution.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body></body>
+<script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
+<body onload="MyScreenResolution()"></body>
 </html>
