--- a/ScreenResolution.html
+++ b/ScreenResolution.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
 <body onload="MyScreenResolution()"></body>
 </html>
