--- a/cbrt.html
+++ b/cbrt.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript" src="https//fedrikaristiyanto.github.io/scripts/cbrt.js" async>
+</script>
 </head>
 <body>
-<input type="number" oninput=""><br>
-<h4></h4>
+<input type="number" oninput="convert(this.value)"><br>
+<h4 id="output"></h4>
 </body>
 </html>
