--- a/cbrt.html
+++ b/cbrt.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/cbrt.js" async>
+</script>
+
 </head>
 <body>
-<script type="text/javascript" src="https//fedrikaristiyanto.github.io/scripts/cbrt.js" async>
-</script>
 <input type="number" oninput="convert(this.value)"><br>
 <h4 id="output"></h4>
 </body>
