--- a/cbrt.html
+++ b/cbrt.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>cube root</title>
 <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/cbrt.js" async>
 </script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
