--- a/cbrt.html
+++ b/cbrt.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>cube root</title>
-<script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/cbrt.js" async>
+<script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/cbrt.js">
 </script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
