--- a/odd_even.html
+++ b/odd_even.html
@@ -25,5 +25,8 @@ background-size:50px;
         <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()" style="background-color:green;color:white;">
         <input type="reset" value="clear" style="background-color:#ff0000;color:white;">
         </form>
+
+        <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/me.js"></script>
+        <address id="Me"></address>
     </body>
 </html>
