--- a/odd_even.html
+++ b/odd_even.html
@@ -26,7 +26,7 @@ background-size:50px;
         <input type="reset" value="clear" style="background-color:#ff0000;color:white;">
         </form>
 
-        <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/me.js"></script>
+        <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/me.js" defer></script>
         <address id="Me"></address>
     </body>
 </html>
