--- a/odd_even.html
+++ b/odd_even.html
@@ -11,8 +11,13 @@
          padding:5px;
          }
 body {
-background-image: url("https://fedrikaristiyanto.github.io/image/png/Star.png");
-background-size:50px;
+ background-image: url("https://fedrikaristiyanto.github.io/image/png/Star.png");
+ background-size:50px;
+}
+
+#footer {
+position:fixed;
+bottom:0;
 }
        </style>
    </head>
@@ -25,8 +30,8 @@ background-size:50px;
         <input type="button" value="cek bil. Ganjil atau Genap" onclick="GanjilGenap()" style="background-color:green;color:white;">
         <input type="reset" value="clear" style="background-color:#ff0000;color:white;">
         </form>
-
+<div id="footer">
         <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/me.js" defer></script>
-        <address id="Me"></address>
+        <address>author: <span id="Me"></span></address></div>
     </body>
 </html>
