--- a/cbrt.html
+++ b/cbrt.html
@@ -4,13 +4,13 @@
 <title>cube root</title>
 <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/cbrt.js">
 </script>
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fedrikaristiyanto.github.io/css/Theme_colorNames.css"  rel="stylesheet" type="text/css" />
 
 </head>
 <body>
 <h3>cube root</h3>
-<input type="number" oninput="cuberoot(this.value)"><br>
+<input class="FloralWhite" type="number" oninput="cuberoot(this.value)"><br>
 <h4 id="output"></h4>
 </body>
 </html>
