--- a/cbrt.html
+++ b/cbrt.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h3>cube root</h3>
-<input class="FloralWhite" type="number" oninput="cuberoot(this.value)"><br>
+<input class="Cornsilk" type="number" oninput="cuberoot(this.value)"><br>
 <h4 id="output"></h4>
 </body>
 </html>
