--- a/Mp3.htm
+++ b/Mp3.htm
@@ -3,6 +3,6 @@
 <html>
 <body>
 <h3>download mp3</h3>
-<object width="400px" height="500px" data="https://fedrikaristiyanto.gitjub.io/files/msc/Cannibal_Corpse.htm"></object>
+<object width="400px" height="500px" data="https://fedrikaristiyanto.github.io/files/msc/Cannibal_Corpse.htm"></object>
 </body>
 </html>
