--- a/Mp3.htm
+++ b/Mp3.htm
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
 <body>
 <h3>download mp3</h3>
-<object width="400px" height="500px" data="https://fedrikaristiyanto.github.io/files/msc/Cannibal_Corpse.htm"></object>
+<object width="400px" height="300px" data="https://fedrikaristiyanto.github.io/files/msc/Cannibal_Corpse.htm"></object>
 </body>
 </html>
