--- a/Mp3.htm
+++ b/Mp3.htm
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h3>download mp3</h3>
-<object width="400px" height="300px" data="https://fedrikaristiyanto.github.io/files/msc/Cannibal_Corpse.htm"></object>
+<iframe width="400px" height="300px" src="https://fedrikaristiyanto.github.io/files/msc/Cannibal_Corpse.htm"></iframe>
 </body>
 </html>
