--- a/Mp3.htm
+++ b/Mp3.htm
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>cannibal corpse</title>
+<!-- dataurl -->
+<script src="https://fedrikaristiyanto.github.io/files/msc/script/Cannibal_Corpse.js" defer></script>
+ <style>
+body {
+background-color:#300;color:#fff;
+}
+a {
+color:#0f0;
+}
+ </style>
 </head>
 <body>
-<h3>download mp3</h3>
-<iframe width="400px" height="300px" src="https://fedrikaristiyanto.github.io/files/msc/Cannibal_Corpse.htm"></iframe>
+<h2>Cannibal Corpse</h2>
+<div id="Evisceration_Plague">
+</div>
 </body>
 </html>
