--- a/2_mp3.htm
+++ b/2_mp3.htm
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+ <title>Jazz mp3</title>
+  <meta name="viewport" content="width=device-width">
+</head>
 <body>
 <object data="https://fedrikaristiyanto.github.io/files/jff/Jz.htm" width="100%"></object>
 </body>
