--- a/3_mp3.htm
+++ b/3_mp3.htm
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+ <title>Metal mp3</title>
+ <meta name="viewport" content="width=device-width">
+</head>
+<body>
+<object data="https://fedrikaristiyanto.github.io/files/jff/Mtls.htm" width="100%"></object>
+</body>
+</html>
