--- a/3_mp3.htm
+++ b/3_mp3.htm
@@ -6,6 +6,6 @@
  <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<object data="https://fedrikaristiyanto.github.io/files/jff/Mtls.htm" width="100%"></object>
+<object data="https://fedrikaristiyanto.github.io/files/jff/Mtls.htm" width="100%" width="500px"></object>
 </body>
 </html>
