--- a/JavaScript_N_ECMAScript/i.html
+++ b/JavaScript_N_ECMAScript/i.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 <script>
-
-const data = require('./JavaScript_N_ECMAScript/i.json');
+const data = require('./i.json');
 document.write(data);
 </script>
 </body>
