--- a/JavaScript_N_ECMAScript/i.html
+++ b/JavaScript_N_ECMAScript/i.html
@@ -8,7 +8,7 @@
 <body>
 <script>
 
-fetch("./i.json")
+fetch("./JavaScript_N_ECMAScript/i.json")
 .then(response => {
    return response.json();
 })
