--- a/Music-Player1.htm
+++ b/Music-Player1.htm
@@ -7,7 +7,7 @@
 <body>
 
 
-<object data="https://fedrikaristiyanto.github.io/files/jff/p.htm" width="100%" height="400px"></object>
+<object data="https://fedrikaristiyanto.github.io/Music-Player/Instrumental-Rock.htm" width="100%" height="400px"></object>
 
 </body>
 </html>
