--- a/Music-Player2.htm
+++ b/Music-Player2.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Jazz mp3</title>
+ <title></title>
  <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<object data="https://fedrikaristiyanto.github.io/files/jff/Jz.htm" width="100%" height="400px"></object>
+<object data="https://fedrikaristiyanto.github.io/Music-Player/tm.htm" width="100%" height="400px"></object>
 </body>
 </html>
