--- a/Music-Player3.htm
+++ b/Music-Player3.htm
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Metal mp3</title>
+ <title></title>
  <meta name="viewport" content="width=device-width">
 </head>
 <body>
