--- a/Music-Player4.htm
+++ b/Music-Player4.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>x</title>
+ <title></title>
  <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<object data="https://fedrikaristiyanto.github.io/files/jff/bdm.htm" width="100%" height="600px"></object>
+<object data="https://fedrikaristiyanto.github.io/Music-Player/Mtls.htm" width="100%" height="600px"></object>
 </body>
 </html>
