--- a/Music-Player6.htm
+++ b/Music-Player6.htm
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+ <title></title>
+ <meta name="viewport" content="width=device-width">
+</head>
+<body>
+
+
+<object data="https://fedrikaristiyanto.github.io/Music-Player/p.htm" width="100%" height="400px"></object>
+
+</body>
+</html>
