--- a/Me.html
+++ b/Me.html
@@ -5,7 +5,7 @@
 <p id="demo"></p>
 
 <script type="module">
-import { name} from "./me.js";
+import { name} from "./Me.js";
 
 let text = "My name is " + name;
 
