--- a/Me.html
+++ b/Me.html
@@ -7,7 +7,7 @@
 <script type="module">
 import { name} from "./Me.js";
 
-let text = "My name is " + name;
+let text = "name : " + name;
 
 document.getElementById("demo").innerHTML = text
 </script>
