--- a/music/fav.html
+++ b/music/fav.html
@@ -1,1 +1,7 @@
+<html>
+<head>
+<script src="https://fedrikaristiyanto.github.io/Music-Player/javascript/playlist.js" type="text/javascript"></script>
 
+</head>
+<body></body>
+</html>
