--- a/music/fav.html
+++ b/music/fav.html
@@ -14,7 +14,7 @@
 <script>
 var Caption =[
 "Dido - White Flag",
-"Van Halen - White Flag",
+"Van Halen - 316",
 "Dave Grusin - Crystal Morning"
 ];
 var Source =[
