--- a/music/fav.html
+++ b/music/fav.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 <script src="https://fedrikaristiyanto.github.io/Music-Player/javascript/playlist.js" type="text/javascript"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body onload="loadFirstArray()">
+<h3>favorit</h3>
 
 <figure>
 <figcaption id="Caption"></figcaption>
