--- a/music/fav.html
+++ b/music/fav.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <script src="https://fedrikaristiyanto.github.io/Music-Player/javascript/playlist.js" type="text/javascript"></script>
@@ -5,7 +6,7 @@
 </head>
 
 <body onload="loadFirstArray()">
-<h3>favorit</h3>
+<h3 class="pelangi">favorit</h3>
 
 <figure>
 <figcaption id="Caption"></figcaption>
