--- a/music/fav.html
+++ b/music/fav.html
@@ -3,6 +3,7 @@
 <head>
 <script src="https://fedrikaristiyanto.github.io/Music-Player/javascript/playlist.js" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fedrikaristiyanto.github.io/css/bg-lin-gradien-pelangi.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body onload="loadFirstArray()">
