--- a/music/fav.html
+++ b/music/fav.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>favorit</title>
 <script src="https://fedrikaristiyanto.github.io/Music-Player/javascript/playlist.js" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fedrikaristiyanto.github.io/css/bgRainbow.css" rel="stylesheet" type="text/css" />
