--- a/music/fav.html
+++ b/music/fav.html
@@ -17,14 +17,15 @@
 
 <script>
 var Caption =[
+"Nightwish - Swanheart", 
 "Dido - White Flag",
-"Van Halen - 316",
-"Dave Grusin - Crystal Morning"
+"Van Halen - 316"
 ];
 var Source =[
+
+"https://docs.google.com/uc?export=download&id=1cFmpbNz-d0tjvYBgT2foBYyfhLEEZND9", 
 "https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3",
-"https://fedrikaristiyanto.github.io/files/audio/van halen - 316.mp3",
-"https://bit.ly/3LaX9ii"
+"https://fedrikaristiyanto.github.io/files/audio/van halen - 316.mp3"
 ];
 </script>
 
