--- a/ScreenResolution.html
+++ b/ScreenResolution.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
 </head>
 <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
 <body onload="MyScreenResolution()"></body>
