--- a/ScreenResolution.html
+++ b/ScreenResolution.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
 </head>
+<body onload="MyScreenResolution()">
 <script src="https://fedrikaristiyanto.github.io/scripts/JS.js"></script>
-<body onload="MyScreenResolution()"></body>
+</body>
 </html>
