--- a/Me.html
+++ b/Me.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
+
+
+</head>
 <body>
 
 <p id="demo"></p>
