--- a/Me.html
+++ b/Me.html
@@ -6,16 +6,18 @@
 
 </head>
 <body>
+<div class="container">
 
 <p id="demo"></p>
 
 <script type="module">
-import { name} from "./Me.js";
+import {name} from "./Me.js";
 
 let text = "name : " + name;
 
 document.getElementById("demo").innerHTML = text
 </script>
+</div>
 
 </body>
 </html>
