--- a/Me.html
+++ b/Me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
+<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@latest/css/Style.css" rel="stylesheet" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
