--- a/Me.html
+++ b/Me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
+<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@be9cd4a078cac60ca52bbf2107130f0abaa39696/css/Style.css" rel="stylesheet" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
@@ -11,6 +11,10 @@
 </div>
 
 <div class="container">
+<div class="pagination">
+<a href="https://kaihans3n.github.io">index</a>
+<a class="active" href="">me</a>
+</div>
 
 <p id="demo"></p>
 
