--- a/music/index.html
+++ b/music/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+<head>
+<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@22c32b91a067fbccd25aa9f034fd7d1fb90dd3e3/css/Style.css" rel="stylesheet" type="text/css" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+Music
+</body>
 </html>
