--- a/preview.html
+++ b/preview.html
@@ -1,4 +1,13 @@
+<!-- untuk pratinjau -->
+
 <!DOCTYPE html>
 <html>
-
+<head>
+<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@22c32b91a067fbccd25aa9f034fd7d1fb90dd3e3/css/Style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<div class="header">
+<h3>pratinjau</h3>
+</div>
+</body>
 </html>
