--- a/preview.html
+++ b/preview.html
@@ -9,5 +9,8 @@
 <div class="header">
 <h3>pratinjau</h3>
 </div>
+<div class="container>
+<button class="button" onclick="alert('ok')">click me</button>
+</div>
 </body>
 </html>
