--- a/preview.html
+++ b/preview.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 <link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@22c32b91a067fbccd25aa9f034fd7d1fb90dd3e3/css/Style.css" rel="stylesheet" type="text/css" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="header">
@@ -11,6 +12,9 @@
 </div>
 <div class="container">
 <button class="button" onclick="alert('ok')">click me</button>
+</div>
+<div class="footer">
+<p>pratinjau</p>
 </div>
 </body>
 </html>
