--- a/preview.html
+++ b/preview.html
@@ -11,7 +11,11 @@
 <h3>pratinjau</h3>
 </div>
 <div class="container">
-<button class="button" onclick="alert('ok')">click me</button>
+<table>
+<caption>pratinjau table</caption>
+<tr><th>table header</th></tr>
+<tr><td>content</td></tr>
+</table>
 </div>
 <div class="footer">
 <p>pratinjau</p>
