--- a/preview.html
+++ b/preview.html
@@ -11,7 +11,7 @@
 <h3>pratinjau</h3>
 </div>
 <div class="container">
-<table>
+<table class="table">
 <caption>pratinjau table</caption>
 <tr><th>table header</th></tr>
 <tr><td>content</td></tr>
