--- a/preview.html
+++ b/preview.html
@@ -11,6 +11,7 @@
 <h3>pratinjau</h3>
 </div>
 <div class="container">
+<input placeholder="pratinjau kolom input">
 <table class="table">
 <caption>pratinjau table</caption>
 <tr><th>table header</th></tr>
