--- a/Me.html
+++ b/Me.html
@@ -3,7 +3,7 @@
 <head>
 
 
-<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@latest/css/Style.css" rel="stylesheet" type="text/css" />
+<link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
