--- a/music/fav.html
+++ b/music/fav.html
@@ -17,15 +17,14 @@
 
 <script>
 var Caption =[
+"George Benson - Breezin", 
 "Nightwish - Swanheart", 
-"Dido - White Flag",
-"Van Halen - 316"
+"Dido - White Flag"
 ];
 var Source =[
-
+"https://docs.google.com/uc?export=download&id=1KfV-TQeMgWmd8AMZ0WyvaFSq-6ijdH0z", 
 "https://docs.google.com/uc?export=download&id=1cFmpbNz-d0tjvYBgT2foBYyfhLEEZND9", 
-"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3",
-"https://fedrikaristiyanto.github.io/files/audio/van halen - 316.mp3"
+"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3"
 ];
 </script>
 
