--- a/music/index.html
+++ b/music/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="container">
 Music
+</div>
 </body>
 </html>
