--- a/music/index.html
+++ b/music/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="header">
 Music
+</div>
+<div class="container"></div>
+<div class="footer">_</div>
 </body>
 </html>
