--- a/music/index.html
+++ b/music/index.html
@@ -8,7 +8,9 @@
 <div class="header">
 Music
 </div>
-<div class="container"></div>
-<div class="footer">_</div>
+<div class="container">
+...
+</div>
+<div class="footer">...</div>
 </body>
 </html>
