--- a/music/index.html
+++ b/music/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="container">
+<div class="header">
 Music
 </div>
 </body>
