--- a/music/index.html
+++ b/music/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@05b527be026180b3de941f5d064f9dc48b420826" rel="stylesheet" type="text/css" />
+<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@05b527be026180b3de941f5d064f9dc48b420826/css/Style.css" rel="stylesheet" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
