--- a/music/index.html
+++ b/music/index.html
@@ -9,6 +9,6 @@
 Music
 </div>
 <div class="container">content</div>
-<div class="footer">_.github.io</div>
+<div class="footer">kaihans3n.github.io</div>
 </body>
 </html>
