--- a/music/index.html
+++ b/music/index.html
@@ -8,6 +8,10 @@
 <div class="header">
 Music
 </div>
+<div class="nav">
+<a href="../index.md">index</a>
+<a href="" class="active">Music Page</a>
+</div>
 <div class="container">content</div>
 <div class="footer">kaihans3n.github.io</div>
 </body>
