--- a/music/index.html
+++ b/music/index.html
@@ -9,7 +9,7 @@
 Music
 </div>
 <div class="nav">
-<a href="../index.md">index</a>
+<a href="../index">index</a>
 <a href="" class="active">Music Page</a>
 </div>
 <div class="container">content</div>
