--- a/music/index.html
+++ b/music/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@05b527be026180b3de941f5d064f9dc48b420826/css/Style.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://fedrikaristiyanto.github.io/fonts/genericons/genericons.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="header">
-Music
+<h3><span class="genericon genericon-audio"></span>Music</h3>
 </div>
 <div class="nav">
 <a href="../index">index</a>
