--- a/music/index.html
+++ b/music/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
 <div class="header">
-<h3><span class="genericon genericon-audio"></span>Music</h3>
+<h3>Music</h3>
 </div>
 <div class="nav">
 <a href="../index">index</a>
-<a href="" class="active">Music Page</a>
+<a href="" class="active"><span class="genericon genericon-audio"></span>
+Music Page</a>
 </div>
 <div class="container">content</div>
 <div class="footer">kaihans3n.github.io</div>
