--- a/music/index.html
+++ b/music/index.html
@@ -14,7 +14,7 @@
 <a href="" class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
 </div>
-<div class="container">content</div>
+<div class="container"><a href="/music/fav.html"cekidot</a></div>
 <div class="footer">kaihans3n.github.io</div>
 </body>
 </html>
