--- a/music/index.html
+++ b/music/index.html
@@ -10,7 +10,7 @@
 <h3>Music</h3>
 </div>
 <div class="nav">
-<a href="../index" class="genericon genericon-home">index</a>
+<a href="../index"><span class="genericon genericon-home">index</span></a>
 <a href="" class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
 </div>
