--- a/music/index.html
+++ b/music/index.html
@@ -15,7 +15,7 @@
 <a href="" class="active"><span class="genericon genericon-audio"></span>
 Music Page</a></div>
 </div class="dropdown-content">
-<a>Instrumental Rock</a>
+<a>Instrumental Rock</a></div>
 </div>
 </div>
 <div class="container"><a href="/music/fav.html">cekidot</a></div>
