--- a/music/index.html
+++ b/music/index.html
@@ -11,13 +11,13 @@
 </div>
 <div class="nav">
 <a href="../index"><span class="genericon genericon-home"></span>index</a>
-<div class="dropdown">
-<a href="" class="active"><span class="genericon genericon-audio"></span>
-Music Page</a></div>
-</div class="dropdown-content">
-<a>Instrumental Rock</a></div>
+ <div class="dropdown">
+ <a class="active"><span class="genericon genericon-audio"></span>
+Music Page</a>
+  </div class="dropdown-content"><a>Instrumental Rock</a></div>
+ </div>
 </div>
-</div>
+
 <div class="container"><a href="/music/fav.html">cekidot</a></div>
 <div class="footer">kaihans3n.github.io</div>
 </body>
