--- a/music/index.html
+++ b/music/index.html
@@ -10,11 +10,11 @@
 <h3>Music</h3>
 </div>
 <div class="nav">
-<a href="../index"><span class="genericon genericon-home"></span>index</a>
+ <a href="../index"><span class="genericon genericon-home"></span>index</a>
  <div class="dropdown">
  <a class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
-  </div class="dropdown-content"><a>Instrumental Rock</a></div>
+  <div class="dropdown-content"><a>Instrumental Rock</a></div>
  </div>
 </div>
 
