--- a/music/index.html
+++ b/music/index.html
@@ -14,11 +14,14 @@
  <div class="dropdown">
  <a class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
-  <div class="dropdown-content"><a>Instrumental Rock</a></div>
+  <div class="dropdown-content">
+   <a>Instrumental Rock</a>
+   <a>Favorit</a>
+  </div>
  </div>
 </div>
 
-<div class="container"><a href="/music/fav.html">cekidot</a></div>
+<div class="container"><a href="/music/fav.html">cekidot</a> atau pilih pada menu</div>
 <div class="footer">kaihans3n.github.io</div>
 </body>
 </html>
