--- a/music/index.html
+++ b/music/index.html
@@ -11,6 +11,7 @@
 </div>
 <div class="nav">
  <a href="../index"><span class="genericon genericon-home"></span>index</a>
+ <a href="../Me.html">Me</a>
  <div class="dropdown">
  <a class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
@@ -21,7 +22,10 @@ Music Page</a>
  </div>
 </div>
 
-<div class="container"><a href="/music/fav.html">cekidot</a> atau pilih pada menu</div>
+<div class="container"><a href="/music/fav.html">
+<p>cekidot</a> atau pilih pada menu</p>
+
+</div>
 <div class="footer">kaihans3n.github.io</div>
 </body>
 </html>
