--- a/music/index.html
+++ b/music/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@f06f5526c3f043e467f432290ebf54a2a09ddad3/css/Style.css" rel="stylesheet" type="text/css" />
+<link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://fedrikaristiyanto.github.io/fonts/genericons/genericons.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
