--- a/music/index.html
+++ b/music/index.html
@@ -16,7 +16,7 @@
  <a class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
   <div class="dropdown-content">
-   <a>Instrumental Rock</a>
+   <a href="./Music-Player1">Instrumental Rock</a>
    <a>Favorit</a>
   </div>
  </div>
