--- a/music/index.html
+++ b/music/index.html
@@ -11,13 +11,13 @@
 </div>
 <div class="nav">
  <a href="../index"><span class="genericon genericon-home"></span>index</a>
- <a href="../Me.html">Me</a>
+ <a href="../Me.html"><span class="genericon genericon-user"></span>Me</a>
  <div class="dropdown">
  <a class="active"><span class="genericon genericon-audio"></span>
 Music Page</a>
   <div class="dropdown-content">
    <a href="./Music-Player1.htm">Instrumental Rock</a>
-   <a>Favorit</a>
+   <a href="./fav.html">Favorit</a>
   </div>
  </div>
 </div>
