--- a/music/index.html
+++ b/music/index.html
@@ -13,7 +13,7 @@
  <a href="../index"><span class="genericon genericon-home"></span>index</a>
  <a href="../Me.html"><span class="genericon genericon-user"></span>Me</a>
  <div class="dropdown">
- <a class="active"><span class="genericon genericon-audio"></span>
+ <a class="active" href="javascript:void(0)"><span class="genericon genericon-audio"></span>
 Music Page</a>
   <div class="dropdown-content">
    <a href="./Music-Player1.htm">Instrumental Rock</a>
