--- a/music/Music-Player1.htm
+++ b/music/Music-Player1.htm
@@ -3,9 +3,13 @@
 <head>
  <title></title>
  <meta name="viewport" content="width=device-width">
+<link href="https://fedrikaristiyanto.github.io/css/pagination.css" rel="stylesheet" />
 </head>
 <body>
-
+<div class="pagination">
+<a class="active">InstRock</a>
+<a>Lainnya >></a>
+</div>
 
 <object data="https://fedrikaristiyanto.github.io/Music-Player/Instrumental-Rock.htm" width="100%" height="400px"></object>
 
