--- a/music/Music-Player1.htm
+++ b/music/Music-Player1.htm
@@ -8,7 +8,7 @@
 <body>
 <div class="pagination">
 <a class="active">InstRock</a>
-<a>Lainnya >></a>
+<a href="./fav.html">Lainnya >></a>
 </div>
 
 <object data="https://fedrikaristiyanto.github.io/Music-Player/Instrumental-Rock.htm" width="100%" height="400px"></object>
