--- a/music/Music-Player1.htm
+++ b/music/Music-Player1.htm
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="pagination">
-<a class="active">InstRock</a>
+<a href="" class="active">InstRock</a>
 <a href="./fav.html">Lainnya >></a>
 </div>
 
