--- a/music/Music-Player1.htm
+++ b/music/Music-Player1.htm
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="pagination">
+<a href="./index.html"><< Back</a>
 <a href="" class="active">InstRock</a>
 <a href="./fav.html">Lainnya >></a>
 </div>
