--- a/music/fav.html
+++ b/music/fav.html
@@ -5,10 +5,14 @@
 <script src="https://fedrikaristiyanto.github.io/Music-Player/javascript/playlist.js" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fedrikaristiyanto.github.io/css/bgRainbow.css" rel="stylesheet" type="text/css" />
+<style>
+/*import icon*/
+ @import url('https://fedrikaristiyanto.github.io/fonts/genericons/genericons.css');
+</style>
 </head>
 
 <body onload="loadFirstArray()">
-<h3 class="pelangi">favorit</h3>
+<h3 class="pelangi"><i class="genericon genericon-star"></i>favorit</h3>
 
 <figure>
 <figcaption id="Caption"></figcaption>
