--- a/Me.html
+++ b/Me.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="container">
-<div class="pagination">
+<div class="nav">
 <a href="https://kaihans3n.github.io">index</a>
 <a class="active" href="">me</a>
 </div>
