--- a/Me.html
+++ b/Me.html
@@ -19,16 +19,7 @@
 <a class="active" href="">me</a>
 </div>
 <div class="container">
-
-<p id="demo"></p>
-
-<script type="module">
-import {name} from "./Me.js";
-
-let text = "name : " + name;
-
-document.getElementById("demo").innerHTML = text
-</script>
+<p>simple</p>
 </div>
 
 <div class="footer">
