--- a/music/fav.html
+++ b/music/fav.html
@@ -21,14 +21,16 @@
 
 <script>
 var Caption =[
+"Saigon Kick - love is on the way", 
+
 "George Benson - Breezin", 
-"Nightwish - Swanheart", 
-"Dido - White Flag"
+"Nightwish - Swanheart"
 ];
 var Source =[
+"https://docs.google.com/uc?export=download&id=1rURlDh0KaC23ir5xldhheqnsFnBXk7rq", 
+
 "https://docs.google.com/uc?export=download&id=1KfV-TQeMgWmd8AMZ0WyvaFSq-6ijdH0z", 
-"https://docs.google.com/uc?export=download&id=1cFmpbNz-d0tjvYBgT2foBYyfhLEEZND9", 
-"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3"
+"https://docs.google.com/uc?export=download&id=1cFmpbNz-d0tjvYBgT2foBYyfhLEEZND9"
 ];
 </script>
 
