--- a/Me.html
+++ b/Me.html
@@ -6,7 +6,7 @@
 <link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+   <link rel="icon" type="image/png" href="/files/Icon.png">
 </head>
 <body>
 <div class="header">
