--- a/preview.html
+++ b/preview.html
@@ -5,9 +5,23 @@
 <head>
 <link href="https://cdn.jsdelivr.net/gh/fedrikaristiyanto/fedrikaristiyanto.github.io@latest/css/Style.css" rel="stylesheet" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+.mask {
+  -webkit-mask-image: url(logo.png);
+  mask-image: url(logo.png);
+  -webkit-mask-size: 70%;
+  mask-size: 70%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;    
+}
+</style>
 </head>
 <body>
 <div class="header">
+ <div class="mask">
+  <img src="https://fedrikaristiyanto.github.io/files/horizon.jpg">
+ </div>
 <h3>pratinjau</h3>
 </div>
 <div class="container">
