--- a/preview.html
+++ b/preview.html
@@ -8,8 +8,8 @@
 <style>
 
 .mask {
-  -webkit-mask-image: url(logo.png);
-  mask-image: url(logo.png);
+  -webkit-mask-image: url(./Icons.png);
+  mask-image: url(./Icons.png);
   -webkit-mask-size: 70%;
   mask-size: 70%;
   -webkit-mask-repeat: no-repeat;
