--- a/preview.html
+++ b/preview.html
@@ -10,8 +10,8 @@
 .mask {
   -webkit-mask-image: url(./Icons.png);
   mask-image: url(./Icons.png);
-  -webkit-mask-size: 70%;
-  mask-size: 70%;
+  -webkit-mask-size: 200px 100px;
+  mask-size: 200px 100px;
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;    
 }
@@ -20,7 +20,7 @@
 <body>
 <div class="header">
  <div class="mask">
-  <img src="https://fedrikaristiyanto.github.io/files/horizon.jpg">
+  <img src="https://fedrikaristiyanto.github.io/files/horizon.jpg" width="100%">
  </div>
 <h3>pratinjau</h3>
 </div>
