--- a/preview.html
+++ b/preview.html
@@ -8,6 +8,8 @@
 <style>
 
 .mask {
+margin:auto;
+
   -webkit-mask-image: url(./Icons.png);
   mask-image: url(./Icons.png);
   -webkit-mask-size: 200px 100px;
