--- a/preview.html
+++ b/preview.html
@@ -8,7 +8,8 @@
 <style>
 
 .mask {
-margin:auto;
+-webkit-mask-position:center;
+        mask-position:center;
 
   -webkit-mask-image: url(./Icons.png);
   mask-image: url(./Icons.png);
