--- a/music/index.html
+++ b/music/index.html
@@ -3,7 +3,10 @@
 <head>
 <link href="https://fedrikaristiyanto.github.io/css/Style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://fedrikaristiyanto.github.io/fonts/genericons/genericons.css" />
+   <link rel="icon" type="image/png" href="../Icons.png">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 <div class="header">
