--- a/digiClock.html
+++ b/digiClock.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+<head>
+   <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/digiClock.js"></script>
+
+</head>
+<body>
+<h3></h3>
+</body>
 </html>
