--- a/digiClock.html
+++ b/digiClock.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/digiClock.js"></script>
-
+<script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/digiClock.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <h3 id="digiClock"></h3>
