--- a/music/fav.html
+++ b/music/fav.html
@@ -21,16 +21,16 @@
 
 <script>
 var Caption =[
-"George Michael - Careless Whisper",
-"Saigon Kick - love is on the way", 
+"Scorpions - Tease Me Please Me", 
 
-"George Benson - Breezin"
+"George Michael - Careless Whisper",
+"Saigon Kick - love is on the way"
 ];
 var Source =[
-"https://bit.ly/3JB20KH",
-"https://docs.google.com/uc?export=download&id=1rURlDh0KaC23ir5xldhheqnsFnBXk7rq", 
+"https://docs.google.com/uc?export=download&id=1ihxQpqPwhlyhSig85CbZ2pbSelWknSS9", 
 
-"https://docs.google.com/uc?export=download&id=1KfV-TQeMgWmd8AMZ0WyvaFSq-6ijdH0z"
+"https://bit.ly/3JB20KH",
+"https://docs.google.com/uc?export=download&id=1rURlDh0KaC23ir5xldhheqnsFnBXk7rq"
 ];
 </script>
 
