--- a/Me.html
+++ b/Me.html
@@ -28,7 +28,7 @@
 <script>
 document.body.onload=function(){hostName()};
 function hostName(){
-document.getElementById("Hostname").innerHTML="x" + window.location.hostname;
+document.getElementById("Hostname").innerHTML=window.location.hostname;
 }
 </script>
 
