--- a/music/index.html
+++ b/music/index.html
@@ -26,6 +26,11 @@ Music Page</a>
 <p>cekidot</a> atau pilih pada menu</p>
 
 </div>
-<div class="footer">kaihans3n.github.io</div>
+<div class="footer">
+<p id="Hostname"></p>
+<script>
+document.getElementById("Hostname").innerHTML=location.hostname;
+</script>
+</div>
 </body>
 </html>
