--- a/music/Music-Player1.htm
+++ b/music/Music-Player1.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title></title>
+ <title>instrumental rock</title>
  <meta name="viewport" content="width=device-width">
 <link href="https://fedrikaristiyanto.github.io/css/pagination.css" rel="stylesheet" />
 </head>
