--- a/music/fav.html
+++ b/music/fav.html
@@ -21,16 +21,16 @@
 
 <script>
 var Caption =[
+"Van Halen - Panama", 
 "Scorpions - Tease Me Please Me", 
 
-"George Michael - Careless Whisper",
-"Saigon Kick - love is on the way"
+"George Michael - Careless Whisper"
 ];
 var Source =[
+"https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb", 
 "https://docs.google.com/uc?export=download&id=1ihxQpqPwhlyhSig85CbZ2pbSelWknSS9", 
 
-"https://bit.ly/3JB20KH",
-"https://docs.google.com/uc?export=download&id=1rURlDh0KaC23ir5xldhheqnsFnBXk7rq"
+"https://bit.ly/3JB20KH"
 ];
 </script>
 
