--- a/music/fav.html
+++ b/music/fav.html
@@ -21,16 +21,16 @@
 
 <script>
 var Caption =[
+"John Petrucci - Lost Without You", 
 "Van Halen - Panama", 
 "Scorpions - Tease Me Please Me", 
 
-"George Michael - Careless Whisper"
 ];
 var Source =[
+"https://bit.ly/3MaGbC5", 
 "https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb", 
 "https://docs.google.com/uc?export=download&id=1ihxQpqPwhlyhSig85CbZ2pbSelWknSS9", 
 
-"https://bit.ly/3JB20KH"
 ];
 </script>
 
