--- a/pages/preview.html
+++ b/pages/preview.html
@@ -11,8 +11,8 @@
 -webkit-mask-position:center;
         mask-position:center;
 
-  -webkit-mask-image: url(./Icons.png);
-  mask-image: url(./Icons.png);
+  -webkit-mask-image: url(../Icons.png);
+  mask-image: url(../Icons.png);
   -webkit-mask-size: 200px 100px;
   mask-size: 200px 100px;
   -webkit-mask-repeat: no-repeat;
