--- a/music/fav.html
+++ b/music/fav.html
@@ -20,18 +20,19 @@
 </figure>
 
 <script>
+/*
 var Caption =[
 "Van Halen - Panama",
-"Dream Theater - As I Am", 
-"John Petrucci - Lost Without You"
+"Dream Theater - As I Am"
 
 ];
+
 var Source =[
 "https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb",
-"https://docs.google.com/uc?export=download&id=1aOtONhVCDQcKZ5PqL-3S9T0Kfz_oI6x4", 
-"https://bit.ly/3MaGbC5"
+"https://docs.google.com/uc?export=download&id=1aOtONhVCDQcKZ5PqL-3S9T0Kfz_oI6x4"
 
 ];
+*/
 </script>
 
 </body>
