--- a/music/fav.html
+++ b/music/fav.html
@@ -20,19 +20,21 @@
 </figure>
 
 <script>
-/*
+
 var Caption =[
+"Korn - Blind", 
 "Van Halen - Panama",
 "Dream Theater - As I Am"
 
 ];
 
 var Source =[
+"https://docs.google.com/uc?export=download&id=1KnRfrCG9JimYrc7xm9VyohNEyChj7cCa", 
 "https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb",
 "https://docs.google.com/uc?export=download&id=1aOtONhVCDQcKZ5PqL-3S9T0Kfz_oI6x4"
 
 ];
-*/
+
 </script>
 
 </body>
