--- a/pages/digiClock.html
+++ b/pages/digiClock.html
@@ -3,6 +3,14 @@
 <head>
 <script type="text/javascript" src="https://fedrikaristiyanto.github.io/scripts/digiClock.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+#digiClock{
+border-left:4px solid maroon;
+background-color:linen;
+padding:5px;
+}
+
+</style>
 </head>
 <body>
 <h3 id="digiClock"></h3>
