--- a/music/fav.html
+++ b/music/fav.html
@@ -22,17 +22,17 @@
 <script>
 
 var Caption =[
-"Korn - Blind", 
-"Van Halen - Panama",
-"Dream Theater - As I Am"
+"Metallica - The Unforgiven", 
 
+"Korn - Blind", 
+"Van Halen - Panama"
 ];
 
 var Source =[
-"https://docs.google.com/uc?export=download&id=1KnRfrCG9JimYrc7xm9VyohNEyChj7cCa", 
-"https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb",
-"https://docs.google.com/uc?export=download&id=1aOtONhVCDQcKZ5PqL-3S9T0Kfz_oI6x4"
+"https://docs.google.com/uc?id=1CNONAQia2CWajZZ8_fA6-eTF_ryRxtoH&export=download", 
 
+"https://docs.google.com/uc?export=download&id=1KnRfrCG9JimYrc7xm9VyohNEyChj7cCa", 
+"https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb"
 ];
 
 </script>
