--- a/Me.html
+++ b/Me.html
@@ -15,8 +15,8 @@
 
 
 <div class="nav">
-<a href="https://kaihans3n.github.io">index</a>
-<a class="active" href="">me</a>
+<a href="https://kaihans3n.github.io">Index</a>
+<a class="active" href="">Me</a>
 </div>
 <div class="container">
 <p>simple</p>
