--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+<title>YT Music</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
 <iframe width="" height="" src="https://youtube.com/embed/Sh5S3OxiE-s"></iframe>
 </body>
