--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -5,6 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<iframe width="" height="" src="https://youtube.com/embed/Sh5S3OxiE-s"></iframe>
+<iframe width="100%" height="300px" src="https://youtube.com/embed/Sh5S3OxiE-s"></iframe>
 </body>
 </html>
