--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -3,6 +3,9 @@
 <head>
 <title>YT Music</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+@import url('https://fedrikaristiyanto.github.io/css/Style.css');
+</style>
 </head>
 <body>
 <iframe width="100%" height="300px" src="https://youtube.com/embed/Sh5S3OxiE-s"></iframe>
