--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <div class="header">
-<h1>Music From YouTube</h1>
+<h2>Music From YouTube</h2>
 </div>
+<div class="container">
 <iframe width="100%" height="300px" src="https://youtube.com/embed/Sh5S3OxiE-s"></iframe>
+</div>
 </body>
 </html>
