--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -11,12 +11,16 @@
 <div class="header">
 <h2>Music From YouTube</h2>
 </div>
+
+<div class="nav">
+<a href="">Index</a>
+</div>
+
 <div class="container">
 <iframe width="100%" height="300px" src="https://youtube.com/embed/Sh5S3OxiE-s"></iframe>
 </div>
 
 <div class="footer">
-
 <p id="Hostname"></p>
 <script>
 document.body.onload=function(){hostName()};
