--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -13,7 +13,8 @@
 </div>
 
 <div class="nav">
-<a href="">Index</a>
+<a href="https://kaihans3n.github.io">Index</a>
+<a class="active">YT</a>
 </div>
 
 <div class="container">
