--- a/music/index.html
+++ b/music/index.html
@@ -21,7 +21,7 @@ Music Page</a>
   <div class="dropdown-content">
    <a href="./Music-Player1.htm">Instrumental Rock</a>
    <a href="./fav.html">Favorit</a>
-   <a>Favorit From YT</a>
+   <a href="./music/HTML5_YT.html">Favorit From YT</a>
   </div>
  </div>
 </div>
