--- a/music/fav.html
+++ b/music/fav.html
@@ -22,17 +22,17 @@
 <script>
 
 var Caption =[
+"Black Sabbath - Forbidden", 
 "Metallica - The Unforgiven", 
 
-"Korn - Blind", 
-"Van Halen - Panama"
+"Korn - Blind"
 ];
 
 var Source =[
+"https://docs.google.com/uc?export=download&id=1Yr5xEMEVpt3BcYaiogo49_s9cBJxB3WN", 
 "https://docs.google.com/uc?id=1CNONAQia2CWajZZ8_fA6-eTF_ryRxtoH&export=download", 
 
-"https://docs.google.com/uc?export=download&id=1KnRfrCG9JimYrc7xm9VyohNEyChj7cCa", 
-"https://docs.google.com/uc?export=download&id=1a3ZFsud1LurrEMkIY2t4JxCGe6HoUCBb"
+"https://docs.google.com/uc?export=download&id=1KnRfrCG9JimYrc7xm9VyohNEyChj7cCa"
 ];
 
 </script>
