--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="container">
-<iframe width="100%" height="300px" src="https://youtube.com/embed/lHC_pKJKKg8"></iframe>
+<iframe width="100%" height="300px" src="https://youtube.com/embed/lHC_pKJKKg8?controls=1"></iframe>
 </div>
 
 <div class="footer">
