--- a/music/index.html
+++ b/music/index.html
@@ -7,6 +7,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script src="/JavaScript_N_ECMAScript/greets.es" type="text/babel"></script>
 </head>
 <body>
 <div class="header">
