--- a/music/fav.html
+++ b/music/fav.html
@@ -22,15 +22,17 @@
 <script>
 
 var Caption =[
+
+
 "Robbie Williams - Feel", 
-"Black Sabbath - Forbidden", 
-"Metallica - The Unforgiven"
+"Black Sabbath - Forbidden"
 ];
 
 var Source =[
+
+
 "https://bit.ly/3KByovq", 
-"https://docs.google.com/uc?export=download&id=1Yr5xEMEVpt3BcYaiogo49_s9cBJxB3WN", 
-"https://docs.google.com/uc?id=1CNONAQia2CWajZZ8_fA6-eTF_ryRxtoH&export=download", 
+"https://docs.google.com/uc?export=download&id=1Yr5xEMEVpt3BcYaiogo49_s9cBJxB3WN"
 ];
 
 </script>
