--- a/music/fav.html
+++ b/music/fav.html
@@ -23,6 +23,7 @@
 
 var Caption =[
 
+"Dido - White Flag", 
 
 "Robbie Williams - Feel", 
 "Black Sabbath - Forbidden"
@@ -30,6 +31,7 @@ var Caption =[
 
 var Source =[
 
+"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3", 
 
 "https://bit.ly/3KByovq", 
 "https://docs.google.com/uc?export=download&id=1Yr5xEMEVpt3BcYaiogo49_s9cBJxB3WN"
