--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="container">
-<iframe width="100%" height="300px" src="https://youtube.com/embed/LYtiDCXLAcQ?playlist=LYtiDCXLAcQ,AaMDK-GPb1o&controls=1&loop=1"></iframe>
+<iframe width="100%" height="300px" src="https://youtube.com/embed/LYtiDCXLAcQ?playlist=LYtiDCXLAcQ,AaMDK-GPb1o&loop=1"></iframe>
 </div>
 
 <div class="footer">
