--- a/music/fav.html
+++ b/music/fav.html
@@ -23,18 +23,18 @@
 
 var Caption =[
 
+"Within Temptation - Jillian", 
 "Dido - White Flag", 
 
-"Robbie Williams - Feel", 
-"Black Sabbath - Forbidden"
+"Robbie Williams - Feel"
 ];
 
 var Source =[
 
+"https://docs.google.com/uc?export=download&id=124AjE5BUbbT9H4LnFi_vhU0K3ejZy73-", 
 "https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3", 
 
-"https://bit.ly/3KByovq", 
-"https://docs.google.com/uc?export=download&id=1Yr5xEMEVpt3BcYaiogo49_s9cBJxB3WN"
+"https://bit.ly/3KByovq"
 ];
 
 </script>
