--- a/music/fav.html
+++ b/music/fav.html
@@ -22,19 +22,16 @@
 <script>
 
 var Caption =[
-
+"Michael Jackson - You Are Not Alone", 
 "Within Temptation - Jillian", 
-"Dido - White Flag", 
-
-"Robbie Williams - Feel"
+"Dido - White Flag"
 ];
 
 var Source =[
-
+"https://bit.ly/3LWNflr", 
 "https://docs.google.com/uc?export=download&id=124AjE5BUbbT9H4LnFi_vhU0K3ejZy73-", 
-"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3", 
+"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3"
 
-"https://bit.ly/3KByovq"
 ];
 
 </script>
