--- a/music/fav.html
+++ b/music/fav.html
@@ -22,15 +22,17 @@
 <script>
 
 var Caption =[
+
+"Frank Sinatra & Antonio Carlos Jobim - The Girl From Ipanema", 
 "Michael Jackson - You Are Not Alone", 
-"Within Temptation - Jillian", 
-"Dido - White Flag"
+"Within Temptation - Jillian"
 ];
 
 var Source =[
+
+"https://bit.ly/3tKDbF9", 
 "https://bit.ly/3LWNflr", 
-"https://docs.google.com/uc?export=download&id=124AjE5BUbbT9H4LnFi_vhU0K3ejZy73-", 
-"https://fedrikaristiyanto.github.io/files/audio/1 - White Flag.mp3"
+"https://docs.google.com/uc?export=download&id=124AjE5BUbbT9H4LnFi_vhU0K3ejZy73-"
 
 ];
 
