--- a/music/HTML5_YT.html
+++ b/music/HTML5_YT.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="container">
-<iframe width="100%" height="300px" src="https://youtube.com/embed/Fs_E9TP6cvE?playlist=Fs_E9TP6cvE,_1uEy-n4IsU&loop=1"></iframe>
+<iframe width="100%" height="300px" src="https://youtube.com/embed/_1uEy-n4IsU?playlist=_1uEy-n4IsU,C-u5WLJ9Yk4&loop=1"></iframe>
 </div>
 
 <div class="footer">
