--- a/music/fav.html
+++ b/music/fav.html
@@ -22,17 +22,18 @@
 <script>
 
 var Caption =[
+"Dream Theater - The Dance Of Eternity", 
 
 "Frank Sinatra & Antonio Carlos Jobim - The Girl From Ipanema", 
-"Michael Jackson - You Are Not Alone", 
-"Within Temptation - Jillian"
+"Michael Jackson - You Are Not Alone"
 ];
 
 var Source =[
 
+"/files/audio/dream-theater-the-dance-of-eternity-scene-seven.mp3", 
+
 "https://bit.ly/3tKDbF9", 
-"https://bit.ly/3LWNflr", 
-"https://docs.google.com/uc?export=download&id=124AjE5BUbbT9H4LnFi_vhU0K3ejZy73-"
+"https://bit.ly/3LWNflr"
 
 ];
 
