--- a/music/fav.html
+++ b/music/fav.html
@@ -22,18 +22,19 @@
 <script>
 
 var Caption =[
+"Joe Satriani - Starry Night", 
 "Dream Theater - The Dance Of Eternity", 
 
-"Frank Sinatra & Antonio Carlos Jobim - The Girl From Ipanema", 
-"Michael Jackson - You Are Not Alone"
+"Frank Sinatra & Antonio Carlos Jobim - The Girl From Ipanema"
+
 ];
 
 var Source =[
 
+"https://bit.ly/3G7P0KN", 
 "https://fedrikaristiyanto.github.io/files/audio/dream-theater-the-dance-of-eternity-scene-seven.mp3", 
 
-"https://bit.ly/3tKDbF9", 
-"https://bit.ly/3LWNflr"
+"https://bit.ly/3tKDbF9"
 
 ];
 
