--- a/music/fav.html
+++ b/music/fav.html
@@ -22,19 +22,21 @@
 <script>
 
 var Caption =[
-"Joe Satriani - Starry Night", 
-"Dream Theater - The Dance Of Eternity", 
 
-"Frank Sinatra & Antonio Carlos Jobim - The Girl From Ipanema"
+"Helloween - The Dark Ride", 
+"Joe Satriani - Starry Night", 
+"Dream Theater - The Dance Of Eternity"
+
 
 ];
 
 var Source =[
 
-"https://bit.ly/3G7P0KN", 
-"https://fedrikaristiyanto.github.io/files/audio/dream-theater-the-dance-of-eternity-scene-seven.mp3", 
 
-"https://bit.ly/3tKDbF9"
+"https://docs.google.com/uc?export=download&id=1r6SpjqKNmKE4ta0QPRIMYfkRm_NL0Msr", 
+"https://bit.ly/3G7P0KN", 
+"https://fedrikaristiyanto.github.io/files/audio/dream-theater-the-dance-of-eternity-scene-seven.mp3"
+
 
 ];
 
