--- a/music/fav.html
+++ b/music/fav.html
@@ -23,19 +23,20 @@
 
 var Caption =[
 
+"Malmsteen - Brothers", 
+
 "Helloween - The Dark Ride", 
-"Joe Satriani - Starry Night", 
-"Dream Theater - The Dance Of Eternity"
+"Joe Satriani - Starry Night"
 
 
 ];
 
 var Source =[
 
+"https://bit.ly/3BaAv7I", 
 
 "https://docs.google.com/uc?export=download&id=1r6SpjqKNmKE4ta0QPRIMYfkRm_NL0Msr", 
-"https://bit.ly/3G7P0KN", 
-"https://fedrikaristiyanto.github.io/files/audio/dream-theater-the-dance-of-eternity-scene-seven.mp3"
+"https://bit.ly/3G7P0KN"
 
 
 ];
